# Gomoku_LAN

./: .gitignore  Gomoku_LAN.sln  Gomoku_LAN.vcxproj  Gomoku_LAN.vcxproj.filters  README.md
client/: game_gui.py  main.py  network_client.py  protocol.py
client/Test/: test_server.py
server/: CMakeLists.txt
server/src/: GameLogic.cpp  GameLogic.h  NetworkServer.cpp  NetworkServer.h  Protocol.cpp  Protocol.h  main.cpp
